# Claude-demo

./: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOY.md  Dockerfile  Procfile  README.md  app.py  config.py  models.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
modules/: storage.py
templates/: _gaoxin_pdf_styles.html  _generated_document_header.html  _generated_document_header_styles.html  _ip_upload_component.html  _upload_component.html  application_form.html  application_gaoxin_achievement_description.html  application_gaoxin_achievement_evidence.html  application_gaoxin_achievement_evidence_print.html  application_gaoxin_achievement_summary.html  application_gaoxin_achievement_summary_print.html  application_gaoxin_attachments.html  application_gaoxin_attachments_print.html  application_gaoxin_book.html  application_gaoxin_hitech_product_evidence.html  application_gaoxin_hitech_product_summary.html  application_gaoxin_hitech_product_summary_print.html  application_gaoxin_ip_detail_print.html  application_gaoxin_print.html  application_gaoxin_ps_statement.html  application_gaoxin_ps_statement_print.html  application_gaoxin_rd_project.html  application_gaoxin_rd_project_print.html  application_gaoxin_relation_table.html  application_gaoxin_staff_tables_print.html  application_gaoxin_system_attachment_notice_print.html  application_gaoxin_system_doc_print.html  application_gaoxin_system_docs.html  application_gaoxin_system_evidence_print.html  application_gaoxin_system_summary_print.html  application_history.html  application_index.html  (+17 more)
(+50 files in other folders)
