[project]
name = "app"
version = "0.1.0"
dependencies = [ "anthropic==0.70.0", "certifi==2026.6.17", "blinker==1.9.0", "click==8.4.1", "et-xmlfile==2.0.0", "flask==3.1.3", "flask-login==0.6.3", "flask-sqlalchemy==3.1.1", "itsdangerous==2.2.0", "jinja2==3.1.6", "lxml==6.1.1", "markupsafe==3.0.3", "numpy==2.5.0", "openpyxl==3.1.5", "python-calamine==0.5.4", "xlrd3==1.1.0", "pandas==3.0.3", "pdfplumber==0.11.4", "python-dateutil==2.9.0.post0", "python-docx==1.2.0", "pypinyin==0.55.0", "python-dotenv==1.2.2", "six==1.17.0", "sqlalchemy==2.0.51", "typing-extensions==4.15.0", "werkzeug==3.1.8", "pymupdf==1.26.6", "pillow==12.0.0", "pytesseract==0.3.13", "gunicorn==23.0.0", "psycopg2-binary==2.9.10" ]
requires-python = "~=3.13.0"
